# NoesisAPI

./: .gitignore  README.md  config.yaml  example.py  noesis_process.py  requirements.txt
rainbird/: MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
rainbird/noesis/: __init__.py  api.py  extensions.py  pipeline.py
rainbird/noesis/prompts/: noesis_base.prompt  noesis_update.prompt  preprocess.prompt  rainbird_error.prompt  validate.prompt  validate_stage_1.prompt  validate_stage_2.prompt
