[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rainbird"
version = "0.1.0"
description = "A modular pipeline framework for processing text with language models"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "mlx-lm>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Repository = "https://github.com/yourusername/rainbird"
Documentation = "https://github.com/yourusername/rainbird#readme"
"Bug Tracker" = "https://github.com/yourusername/rainbird/issues" 